--- a/index.html
+++ b/index.html
@@ -283,14 +283,22 @@
                         </div>
                     </div>
                 </div>
-                    <div id="path-army" class="flex flex-col md:flex-row-reverse items-center gap-10">
-                        <div class="md:w-1/2">
-                            <img src="images/military.jpg" alt="Military Leadership" class="rounded-xl shadow-lg w-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1e293b/cbd5e1?text=Military';">
+
+                <div id="path-army" class="flex flex-col md:flex-row-reverse items-center gap-10">
+                    <div class="md:w-1/2">
+                        <img src="images/military.jpg" alt="Military Leadership" class="rounded-xl shadow-lg w-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1e293b/cbd5e1?text=Military';">
+                    </div>
+                    <div class="md:w-1/2">
+                        <h3 class="text-2xl font-bold text-white" data-lang="case2_title">Chapter 2: The Addition of Leadership</h3>
+                        <p class="text-sky-400 mt-1 font-semibold" data-lang="case2_role">Artillery Maintenance Team Leader</p>
+                        <div class="mt-4 text-slate-400 space-y-2" data-lang="case2_desc">
+                            <p>Leading a 4-technician maintenance team taught me that technical skill alone isn't enough. I had to not only solve problems but also train my team to do the same. This was my first real taste of teaching – <strong class="text-lg text-sky-400">the challenge of transferring complex knowledge clearly and effectively under pressure.</strong></p>
                         </div>
-                        <div class="md:w-1/2">
-                            <h3 class="text-2xl font-bold text-white" data-lang="case2_title">Chapter 2: The Addition of Leadership</h3>
-                            <p class="text-sky-400 mt-1 font-semibold" data-lang="case2_role">Artillery Maintenance Team Leader</p>
-                            </div>
+                        <div class="mt-4">
+                            <span class="tech-tag">Team Leadership</span>
+                            <span class="tech-tag">Process Management</span>
+                            <span class="tech-tag">Technical Training</span>
+                        </div>
                     </div>
                 </div>
 
@@ -466,7 +474,7 @@
                 skills_cat_mgmt: "Strategy & Management",
                 experience_title: "Professional Experience",
                 experience_subtitle: "A timeline of my key roles and responsibilities.",
-                exp_language: `Design and deliver comprehensive Korean language instruction for a diverse student level. Develop customized lesson plans and culturally-rich materials to <strong class="text-sky-400">accelerate language acquisition</strong> and foster <strong class="text-sky-400">cross-cultural fluency</strong>.`,
+                exp_language: `Design and deliver comprehensive Korean language instruction for a diverse student Level. Develop customized lesson plans and culturally-rich materials to <strong class="text-sky-400">accelerate language acquisition</strong> and foster <strong class="text-sky-400">cross-cultural fluency</strong>.`,
                 exp_outlier: `Developed high-quality training data for leading AI models from clients such as <strong class="text-sky-400">OpenAI, Meta, and GM</strong>. Focused on fine-tuning LLMs through <strong class="text-sky-400">reinforcement learning from human feedback (RLHF)</strong> to enhance model accuracy and safety.`,
                 exp_burlington: `Served as an <strong class="text-sky-400">integral member of the launch team</strong> for a new retail location, contributing to all operational phases from warehouse setup and logistics to floor-set execution. Provided <strong class="text-sky-400">bilingual customer service</strong> during the crucial opening period, ensuring a positive launch experience and operational efficiency.`,
                 exp_utrgv: `Guided and mentored <strong class="text-sky-400">over 300 students</strong> in Python and Machine Learning. Developed <strong class="text-sky-400">supplementary tutorials and led targeted review sessions</strong> to demystify complex topics, contributing to improved student comprehension and project outcomes.`,
@@ -547,7 +555,7 @@
                 education_title: "Educación",
                 casestudies_title: "Mi Camino: De Ingeniero a Educador",
                 casestudies_subtitle: "Mi interés por la educación creció de forma natural a partir de mis experiencias como ingeniero y líder. Cada paso de mi viaje reveló una nueva pieza del rompecabezas.",
-                // ... (Spanish case studies remain the same as previous versions but are omitted here for brevity)
+                // ... (Spanish case studies remain the same as previous versions)
                 philosophy_title: "Mi Filosofía Rectora",
                 philosophy_subtitle: "Aprender Construyendo",
                 philosophy_desc: "Mi filosofía no es una teoría; es el resultado de mi viaje. Creo en aprender haciendo, en simplificar ideas complejas a través de la aplicación en el mundo real y en empoderar a otros con la confianza para construir sus propias soluciones. Este enfoque práctico y directo guía todo lo que hago.",
@@ -590,7 +598,7 @@
                 education_title: "학력",
                 casestudies_title: "나의 길: 엔지니어에서 교육자로",
                 casestudies_subtitle: "교육에 대한 저의 관심은 엔지니어이자 리더로서의 경험에서 자연스럽게 생겨났습니다. 제 여정의 각 단계는 퍼즐의 새로운 조각을 보여주었습니다.",
-                // ... (Korean case studies remain the same as previous versions but are omitted here for brevity)
+                // ... (Korean case studies remain the same as previous versions)
                 philosophy_title: "나의 지침 철학",
                 philosophy_subtitle: "만들면서 배우기",
                 philosophy_desc: "저의 철학은 이론이 아니라 제 여정의 결과물입니다. 저는 직접 해보면서 배우고, 실제 적용을 통해 복잡한 아이디어를 단순하게 만들며, 다른 사람들이 자신만의 솔루션을 구축할 수 있는 자신감을 갖도록 힘을 실어주는 것을 믿습니다. 이 실용적이고 직접적인 접근 방식이 제가 하는 모든 일을 이끌어갑니다.",
