--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </div>
                 <div class="flex flex-wrap justify-center md:justify-start gap-4">
                     <a href="#casestudies" class="bg-sky-500 hover:bg-sky-600 text-white font-semibold px-6 py-3 rounded-lg transition-colors" data-lang="hero_btn_work">See My Path</a>
-                    <a href="https://drive.google.com/file/d/1nuhILDUz9JbYDJshQJlHhUzIJkEs8WDc/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="bg-slate-700 hover:bg-slate-600 text-white font-semibold px-6 py-3 rounded-lg transition-colors inline-flex items-center" data-lang="resume_download_btn">
+                    <a href="https://drive.google.com/file/d/1QYacZYY2GJch5rO3lPRvlc0fTluNP25f/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="bg-slate-700 hover:bg-slate-600 text-white font-semibold px-6 py-3 rounded-lg transition-colors inline-flex items-center" data-lang="resume_download_btn">
                         <svg class="w-5 h-5 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm3.293-7.707a1 1 0 011.414 0L9 10.586V3a1 1 0 112 0v7.586l1.293-1.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd" />
                         </svg>
@@ -127,7 +127,7 @@
                             </h3>
                         </div>
                         <div class="w-full md:w-2/3">
-                            <code class="skill-tag">CAD (SolidWorks)</code>
+                            <code class="skill-tag">CAD (SolidWorks,AutoDesk Fusion360,Auto CAD)</code>
                             <code class="skill-tag">3D Printing & Scanning</code>
                             <code class="skill-tag">CNC</code>
                             <code class="skill-tag">Robotics</code>
