--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <a href="mailto:junesong56@gmail.com" class="text-lg text-white text-center md:text-left block hover:underline">junesong56@gmail.com</a>
                 </div>
                 <div class="flex flex-wrap justify-center md:justify-start gap-4">
-                    //<a href="#casestudies" class="bg-sky-500 hover:bg-sky-600 text-white font-semibold px-6 py-3 rounded-lg transition-colors" data-lang="hero_btn_work">See My Path</a>
+                    <!-- <a href="#casestudies" class="bg-sky-500 hover:bg-sky-600 text-white font-semibold px-6 py-3 rounded-lg transition-colors" data-lang="hero_btn_work">See My Path</a> -->
                     <a href="https://drive.google.com/file/d/1QYacZYY2GJch5rO3lPRvlc0fTluNP25f/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="bg-slate-700 hover:bg-slate-600 text-white font-semibold px-6 py-3 rounded-lg transition-colors inline-flex items-center" data-lang="resume_download_btn">
                         <svg class="w-5 h-5 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm3.293-7.707a1 1 0 011.414 0L9 10.586V3a1 1 0 112 0v7.586l1.293-1.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd" />
@@ -465,7 +465,7 @@
                 hero_title: "Engineer. AI Innovator. Educator.",
                 hero_subtitle: "Bridging AI, Engineering, and Education to Build Practical Solutions.",
                 quick_contact: "Quick Contact",
-                //hero_btn_work: "See My Path",
+                <!-- hero_btn_work: "See My Path", -->
                 resume_download_btn: "Download Resume",
                 skills_title: "My Core Competencies",
                 skills_subtitle: "A practical toolkit for building real-world solutions.",
@@ -535,7 +535,7 @@
                 hero_title: "Ingeniero. Innovador de IA. Educador.",
                 hero_subtitle: "Uniendo IA, Ingeniería y Educación para Construir Soluciones Prácticas.",
                 quick_contact: "Contacto Rápido",
-               //hero_btn_work: "Ver Mi Camino",
+                <!-- hero_btn_work: "Ver Mi Camino", -->
                 resume_download_btn: "Descargar CV",
                 skills_title: "Mis Competencias Clave",
                 skills_subtitle: "Un conjunto de herramientas prácticas para construir soluciones del mundo real.",
@@ -605,7 +605,7 @@
                 hero_title: "엔지니어. AI 혁신가. 교육자.",
                 hero_subtitle: "AI, 엔지니어링, 교육을 연결하여 실용적인 솔루션을 만듭니다.",
                 quick_contact: "빠른 연락",
-                //hero_btn_work: "나의 길 보기",
+                <!-- hero_btn_work: "나의 길 보기", -->
                 resume_download_btn: "이력서 다운로드",
                 skills_title: "핵심 역량",
                 skills_subtitle: "실질적인 솔루션을 만들기 위한 저의 실용적인 툴킷입니다.",
