--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 </div>
                 <div class="mb-10 ml-8">
                     <span class="absolute flex items-center justify-center w-4 h-4 bg-sky-500 rounded-full -left-2 ring-4 ring-slate-800"></span>
-                    <h3 class="text-lg font-semibold text-white">Retail Associate & Store Launch Team <span class="text-sky-400">@ Burlington</span></h3>
+                    <h3 class="text-lg font-semibold text-white">Retail Associate & Store Launch Team <span class="text-sky-400">@ Burlington Stores, Inc</span></h3>
                     <time class="block mb-2 text-sm font-normal leading-none text-slate-500">Dec 2023 – Aug 2025</time>
                     <p class="text-slate-400 text-sm" data-lang="exp_burlington"></p>
                 </div>
