--- a/index.html
+++ b/index.html
@@ -312,12 +312,14 @@
                         <div class="mt-4 text-slate-400 space-y-2" data-lang="case3_desc">
                             <p>This role was a turning point where my passion for hands-on education truly flourished. While managing a lab of over 50 machines, I put my teaching philosophy into action.</p> <p class="mt-2">I began by <strong>developing and teaching more than 10 foundational engineering workshops</strong> to over 100 students. To bridge the gap between theory and practice, I then <strong>led a 3-person student team on a capstone project to build a functional robot arm, designing all parts in SolidWorks and 3D printing custom components, including the gearing system.</strong></p> <p class="mt-2">To ensure this knowledge was sustainable for the long term, I also <strong>produced an extensive video training library of over 20 modules</strong> for future staff, documenting everything from equipment maintenance to software procedures.</p> <p class="mt-2">Seeing students turn abstract concepts into a tangible, working robot solidified my core belief: <strong class="text-lg text-sky-400">empowering people by building accessible, hands-on educational systems.</strong></p>                        </div>
                         <div class="mt-4">
-                            <span class="tech-tag">3D Printing</span>
+                            <span class="tech-tag">CAD(SolidWorks)</span>
+                            <span class="tech-tag">Rapid Prototyping</span>
                             <span class="tech-tag">Robotics</span>
                             <span class="tech-tag">Drones</span>
                             <span class="tech-tag">VR</span>
-                            <span class="tech-tag">Curriculum Development</span>
-                            <span class="tech-tag">Mentorship</span>
+                            <span class="tech-tag">Project Management</span>
+                            <span class="tech-tag">Instructional Design</span>
+                            <span class="tech-tag">Team Leadership & Mentorship</span>
                         </div>
                         <div class="mt-6">
                             <a href="https://youtube.com/playlist?list=PLaBzg96yMjUfdSrMQmCvsE9KdcH8DRn95&si=-acOohTN9O45zW6Q" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-700 hover:bg-slate-600 text-sky-300 font-semibold text-sm px-4 py-2 rounded-full transition-colors" data-lang="case3_playlist_link">View the Training Video Library</a>
