--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
                             <span class="tech-tag">Team Leadership</span>
                             <span class="tech-tag">Process Management</span>
                             <span class="tech-tag">Technical Training</span>
+                            <span class="tech-tag">Heavy Equipment Maintenance (K-9 Artillery)</span>
                         </div>
                     </div>
                 </div>
