--- a/index.html
+++ b/index.html
@@ -373,6 +373,10 @@
                             <span class="tech-tag">Logistics</span>
                             <span class="tech-tag">Teamwork</span>
                         </div>
+                        <div class="mt-6 flex flex-wrap gap-4">
+                            <a href="https://www.mcallenisd.org/article/2361329" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-700 hover:bg-slate-600 text-sky-300 font-semibold text-sm px-4 py-2 rounded-full transition-colors" data-lang="case5_link_burlington">Watch the news</a>
+                        </div>
+
                     </div>
                 </div>
               
@@ -512,6 +516,7 @@
                 case5_title: "Chapter 5: The Lesson in Grassroots Operations",
                 case5_role: "Retail Store Launch Team",
                 case5_desc: `<p>Beyond engineering and code, I wanted to understand how a large-scale business operates from the ground up. Participating in the launch of a new Burlington store was a real-world MBA lesson. From organizing the warehouse to setting up the sales floor and finally serving the first customers, I saw firsthand how every detail, from logistics to teamwork under pressure, directly impacts the bottom line and customer satisfaction. <strong class="text-lg text-sky-400">It was a powerful reminder that successful systems, whether in technology or retail, are built on well-executed fundamentals.</strong></p>`,
+                case5_link_burlington: "Watch the news",
                 case6_title: "Chapter 6: The Synthesis",
                 case6_role: "Founder & Developer of FinitUp",
                 case6_desc: `<p>FinitUp is my ongoing project to translate business theory into a tangible product. The goal is to <strong class="text-sky-400">automate the valuation models I learned in my MBA finance classes using AI, aiming to reduce analysis time by 90% compared to manual methods.</strong> This is my 'Learning by Building' philosophy in action, merging my entire skillset to create value.</p><p class="mt-2">I'm building upon the open-source work of the AI4Finance Foundation (FinRL, FinRobot) to implement automated analysis, recommendations, and virtual trading.</p>`,
@@ -582,6 +587,7 @@
                 case5_title: "Capítulo 5: La Lección en Operaciones de Base",
                 case5_role: "Equipo de Lanzamiento de Tienda Minorista",
                 case5_desc: `<p>Más allá de la ingeniería y el código, quería entender cómo opera un negocio a gran escala desde cero. Participar en el lanzamiento de una nueva tienda Burlington fue una lección de MBA en el mundo real. Desde organizar el almacén hasta preparar el piso de ventas y finalmente atender a los primeros clientes, vi de primera mano cómo cada detalle, desde la logística hasta el trabajo en equipo bajo presión, impacta directamente en el resultado final y la satisfacción del cliente. <strong class="text-lg text-sky-400">Fue un poderoso recordatorio de que los sistemas exitosos, ya sea en tecnología o en retail, se construyen sobre fundamentos bien ejecutados.</strong></p>`,
+                case5_link_burlington: "Watch the news",
                 case6_title: "Capítulo 6: La Síntesis",
                 case6_role: "Fundador y Desarrollador de FinitUp",
                 case6_desc: `<p>FinitUp es mi proyecto en curso para traducir la teoría empresarial en un producto tangible. El objetivo es <strong class="text-sky-400">automatizar los modelos de valoración que aprendí en mis clases de finanzas de MBA usando IA, con el fin de reducir el tiempo de análisis en un 90% en comparación con los métodos manuales.</strong> Esta es mi filosofía de 'Aprender Construyendo' en acción, fusionando todo mi conjunto de habilidades para crear valor.</p><p class="mt-2">Estoy construyendo sobre el trabajo de código abierto de la AI4Finance Foundation (FinRL, FinRobot) para implementar análisis automatizado, recomendaciones y trading virtual.</p>`,
@@ -651,6 +657,7 @@
                 case4_paper_link: "논문 보기",
                 case5_title: "5장: 현장 운영의 교훈",
                 case5_role: "리테일 스토어 런칭팀",
+                case5_link_burlington: "뉴스보기",
                 case5_desc: `<p>엔지니어링과 코드를 넘어, 저는 대규모 비즈니스가 어떻게 가장 기본적인 단계부터 운영되는지 이해하고 싶었습니다. 벌링턴 신규 매장 오픈에 참여한 것은 실제 MBA 수업과도 같았습니다. 창고 정리부터 매장 진열, 그리고 마침내 첫 고객을 응대하기까지, 물류와 팀워크 같은 모든 세부사항이 어떻게 수익 및 고객 만족에 직접적인 영향을 미치는지 직접 목격했습니다. <strong class="text-lg text-sky-400">기술이든 유통이든, 성공적인 시스템은 잘 실행된 기본기 위에 세워진다는 강력한 교훈을 얻었습니다.</strong></p>`,
                 case6_title: "6장: 종합",
                 case6_role: "FinitUp 설립자 및 개발자",
