--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                             <code class="skill-tag">Process Improvement</code>
                             <code class="skill-tag">Financial Modeling</code>
                             <a href="#path-finitup"><code class="skill-tag hover:bg-sky-500 hover:text-white transition-colors cursor-pointer">AI-based Valuation (FinitUp)</code></a>
-                            <a href="#path-aiclub"><code class="skill-tag hover:bg-sky-500 hover:text-white transition-colors cursor-pointer">Community Building (UTRGV AI Club)</code></a>
+                            <a href="#path-aiclub"><code class="skill-tag hover:bg-sky-500 hover:text-white transition-colors cursor-pointer">Community Building (AI Club at UTRGV)</code></a>
                         </div>
                     </div>
                 </div>
