--- a/index.html
+++ b/index.html
@@ -405,11 +405,11 @@
 
                 <div id="path-aiclub" class="flex flex-col md:flex-row items-center gap-10">
                     <div class="md:w-1/2">
-                        <img src="images/aiclub.jpg" alt="UTRGV AI Club" class="rounded-xl shadow-lg w-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1e293b/cbd5e1?text=UTRGV+AI+Club';">
+                        <img src="images/aiclub.jpg" alt="AI Club at UTRGV" class="rounded-xl shadow-lg w-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1e293b/cbd5e1?text=UTRGV+AI+Club';">
                     </div>
                     <div class="md:w-1/2">
                         <h3 class="text-2xl font-bold text-white" data-lang="case7_title">Chapter 7: The Current Mission</h3>
-                        <p class="text-sky-400 mt-1 font-semibold" data-lang="case7_role">Founder of the UTRGV AI Club</p>
+                        <p class="text-sky-400 mt-1 font-semibold" data-lang="case7_role">Founder of the AI Club at UTRGV</p>
                         <div class="mt-4 text-slate-400 space-y-2" data-lang="case7_desc">
                             <p>I founded the AI Club not just to make technology accessible, but also to <strong class="text-sky-400">bridge the information gap between academic theory and industry practice that I experienced as an undergraduate.</strong> It's a community built on the belief that anyone can innovate with the right guidance and a hands-on approach a principle I discovered through my own path from engineer to educator.</p>
                         </div>
@@ -529,7 +529,7 @@
                 case7_youtube_link: "Visit AI Club Youtube",
                 philosophy_title: "My Guiding Philosophy",
                 philosophy_subtitle: "Learning by Building",
-                philosophy_desc: "My philosophy isn't a theory; it's the result of my journey. I believe in learning by doing, making complex ideas simple through real-world application, and empowering others with the confidence to build their own solutions. This practical, hands-on approach guides everything I do.",
+                philosophy_desc: "My philosophy isn't a theory. it's the result of my journey. I believe in learning by doing, making complex ideas simple through real-world application, and empowering others with the confidence to build their own solutions. This practical, hands-on approach guides everything I do.",
                 footer_title: "Let's Connect",
                 footer_subtitle: "I'm always open to discussing new projects, creative ideas, or opportunities. Feel free to reach out.",
                 footer_copy: "&copy; 2025 Junseong Park. All Rights Reserved."
