--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Junseong Park - Engineer, AI Innovator, Educator</title>
+    <title>Junseong Park - Academic Prototyper</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -91,8 +91,13 @@
 
         <section class="py-20 md:py-32 flex flex-col-reverse md:flex-row items-center">
             <div class="md:w-2/3 text-center md:text-left">
-                <h1 class="text-4xl md:text-6xl font-poppins font-bold text-white leading-tight" data-lang="hero_title">Engineer. AI Innovator. Educator.</h1>
-                <p class="mt-6 text-lg text-slate-400 max-w-2xl" data-lang="hero_subtitle">
+                <h1 class="font-poppins text-4xl sm:text-5xl md:text-6xl font-bold text-white leading-tight" data-lang="hero_main_title">
+                    Academic Prototyper
+                </h1>
+                <h2 class="font-poppins text-2xl sm:text-3xl md:text-4xl text-slate-300 mt-2" data-lang="hero_subtitle_roles">
+                    Engineer | AI Innovator | Educator
+                </h2>
+                <p class="mt-6 text-lg text-slate-400 max-w-2xl" data-lang="hero_description">
                     Bridging AI, Engineering, and Education to Build Practical Solutions.
                 </p>
                 <div class="mt-8 mb-8">
@@ -474,8 +479,9 @@
                 nav_casestudies_mobile: "My Path",
                 nav_philosophy_mobile: "Philosophy",
                 nav_contact_mobile: "Contact",
-                hero_title: "Engineer. AI Innovator. Educator.",
-                hero_subtitle: "Bridging AI, Engineering, and Education to Build Practical Solutions.",
+                hero_main_title: "Academic Prototyper",
+                hero_subtitle_roles: "Engineer | AI Innovator | Educator",
+                hero_description: "Bridging AI, Engineering, and Education to Build Practical Solutions.",
                 quick_contact: "Quick Contact",
                 <!-- hero_btn_work: "See My Path", -->
                 resume_download_btn: "Download Resume",
@@ -545,8 +551,9 @@
                 nav_casestudies_mobile: "Mi Camino",
                 nav_philosophy_mobile: "Filosofía",
                 nav_contact_mobile: "Contacto",
-                hero_title: "Ingeniero. Innovador de IA. Educador.",
-                hero_subtitle: "Uniendo IA, Ingeniería y Educación para Construir Soluciones Prácticas.",
+                hero_main_title: "Prototipador Académico",
+                hero_subtitle_roles: "Ingeniero. Innovador de IA. Educador.",
+                hero_description: "Uniendo IA, Ingeniería y Educación para Construir Soluciones Prácticas.",
                 quick_contact: "Contacto Rápido",
                 <!-- hero_btn_work: "Ver Mi Camino", -->
                 resume_download_btn: "Descargar CV",
@@ -616,7 +623,8 @@
                 nav_casestudies_mobile: "나의 길",
                 nav_philosophy_mobile: "나의 철학",
                 nav_contact_mobile: "연락처",
-                hero_title: "엔지니어. AI 혁신가. 교육자.",
+                hero_main_title: "학계의 프로토타이퍼",
+                hero_title: "엔지니어 | AI 혁신가 | 교육자",
                 hero_subtitle: "AI, 엔지니어링, 교육을 연결하여 실용적인 솔루션을 만듭니다.",
                 quick_contact: "빠른 연락",
                 <!-- hero_btn_work: "나의 길 보기", -->
