--- a/index.html
+++ b/index.html
@@ -624,8 +624,8 @@
                 nav_philosophy_mobile: "나의 철학",
                 nav_contact_mobile: "연락처",
                 hero_main_title: "학계의 프로토타이퍼",
-                hero_title: "엔지니어 | AI 혁신가 | 교육자",
-                hero_subtitle: "AI, 엔지니어링, 교육을 연결하여 실용적인 솔루션을 만듭니다.",
+                hero_subtitle_roles: "엔지니어 | AI 혁신가 | 교육자",
+                hero_description: "AI, 엔지니어링, 교육을 연결하여 실용적인 솔루션을 만듭니다.",
                 quick_contact: "빠른 연락",
                 <!-- hero_btn_work: "나의 길 보기", -->
                 resume_download_btn: "이력서 다운로드",
