--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Junseong Park - Academic Prototyper</title>
+    <title>Junseong Park - AI system engineer</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -92,7 +92,7 @@
         <section class="py-20 md:py-32 flex flex-col-reverse md:flex-row items-center">
             <div class="md:w-2/3 text-center md:text-left">
                 <h1 class="font-poppins text-4xl sm:text-5xl md:text-6xl font-bold text-white leading-tight" data-lang="hero_main_title">
-                    Academic Prototyper
+                    AI System Engineer & Educator
                 </h1>
                 <h2 class="font-poppins text-2xl sm:text-3xl md:text-4xl text-slate-300 mt-2" data-lang="hero_subtitle_roles">
                     Engineer | AI Innovator | Educator
@@ -479,7 +479,7 @@
                 nav_casestudies_mobile: "My Path",
                 nav_philosophy_mobile: "Philosophy",
                 nav_contact_mobile: "Contact",
-                hero_main_title: "Academic Prototyper",
+                hero_main_title: "AI System Engineer & Educator",
                 hero_subtitle_roles: "Engineer | AI Innovator | Educator",
                 hero_description: "Bridging AI, Engineering, and Education to Build Practical Solutions.",
                 quick_contact: "Quick Contact",
@@ -551,7 +551,7 @@
                 nav_casestudies_mobile: "Mi Camino",
                 nav_philosophy_mobile: "Filosofía",
                 nav_contact_mobile: "Contacto",
-                hero_main_title: "Prototipador Académico",
+                hero_main_title: "Ingeniero y educador de sistemas de IA",
                 hero_subtitle_roles: "Ingeniero. Innovador de IA. Educador.",
                 hero_description: "Uniendo IA, Ingeniería y Educación para Construir Soluciones Prácticas.",
                 quick_contact: "Contacto Rápido",
@@ -623,7 +623,7 @@
                 nav_casestudies_mobile: "나의 길",
                 nav_philosophy_mobile: "나의 철학",
                 nav_contact_mobile: "연락처",
-                hero_main_title: "학계의 프로토타이퍼",
+                hero_main_title: "AI 시스템 엔지니어 & 교육가",
                 hero_subtitle_roles: "엔지니어 | AI 혁신가 | 교육자",
                 hero_description: "AI, 엔지니어링, 교육을 연결하여 실용적인 솔루션을 만듭니다.",
                 quick_contact: "빠른 연락",
