--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
         <section class="py-20 md:py-32 flex flex-col-reverse md:flex-row items-center">
             <div class="md:w-2/3 text-center md:text-left">
                 <h1 class="font-poppins text-4xl sm:text-5xl md:text-6xl font-bold text-white leading-tight" data-lang="hero_main_title">
-                    AI Engineer & Educator
+                    AI System Engineer & Educator
                 </h1>
                 <h2 class="font-poppins text-2xl sm:text-3xl md:text-4xl text-slate-300 mt-2" data-lang="hero_subtitle_roles">
-                    Academic Prototyper
+                    Developer | Community Builder | Prototyper
                 </h2>
                 <p class="mt-6 text-lg text-slate-400 max-w-2xl" data-lang="hero_description">
-                    Bridging AI, Engineering, and Education to Build Practical Solutions.
+                    "Learning by Building, Teaching by Doing"
                 </p>
                 <div class="mt-8 mb-8">
                     <p class="font-poppins text-sky-400 text-center md:text-left" data-lang="quick_contact">Quick Contact</p>
@@ -479,9 +479,9 @@
                 nav_casestudies_mobile: "My Path",
                 nav_philosophy_mobile: "Philosophy",
                 nav_contact_mobile: "Contact",
-                hero_main_title: "AI Engineer & Educator",
-                hero_subtitle_roles: "Academic Prototyper",
-                hero_description: "Bridging AI, Engineering, and Education to Build Practical Solutions.",
+                hero_main_title: "AI Systems Engineer & Educator",
+                hero_subtitle_roles: "Developer | Community Builder | Prototyper",
+                hero_description: "Learning by Building, Teaching by Doing",
                 quick_contact: "Quick Contact",
                 <!-- hero_btn_work: "See My Path", -->
                 resume_download_btn: "Download Resume",
@@ -551,9 +551,9 @@
                 nav_casestudies_mobile: "Mi Camino",
                 nav_philosophy_mobile: "Filosofía",
                 nav_contact_mobile: "Contacto",
-                hero_main_title: "Ingeniero y educador de IA",
-                hero_subtitle_roles: "Prototipador académico",
-                hero_description: "Uniendo IA, Ingeniería y Educación para Construir Soluciones Prácticas.",
+                hero_main_title: "Ingeniero y educador de sistemas de IA",
+                hero_subtitle_roles: "Desarrollador | Constructor de comunidades | Prototipador",
+                hero_description: "Aprender construyendo, enseñar haciendo",
                 quick_contact: "Contacto Rápido",
                 <!-- hero_btn_work: "Ver Mi Camino", -->
                 resume_download_btn: "Descargar CV",
@@ -623,9 +623,9 @@
                 nav_casestudies_mobile: "나의 길",
                 nav_philosophy_mobile: "나의 철학",
                 nav_contact_mobile: "연락처",
-                hero_main_title: "AI 엔지니어 & 교육가",
-                hero_subtitle_roles: "아카데미 프로토타이퍼",
-                hero_description: "AI, 엔지니어링, 교육을 연결하여 실용적인 솔루션을 만듭니다.",
+                hero_main_title: "AI 시스템 엔지니어 & 교육가",
+                hero_subtitle_roles: "개발자 | 커뮤니티 제작가 | 프로토타이퍼",
+                hero_description: "제작에 의한 학습, 실습에 의한 교육",
                 quick_contact: "빠른 연락",
                 <!-- hero_btn_work: "나의 길 보기", -->
                 resume_download_btn: "이력서 다운로드",
