--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <section class="py-20 md:py-32 flex flex-col-reverse md:flex-row items-center">
             <div class="md:w-2/3 text-center md:text-left">
                 <h1 class="font-poppins text-4xl sm:text-5xl md:text-6xl font-bold text-white leading-tight" data-lang="hero_main_title">
-                    AI System Engineer & Educator
+                    AI Engineer & Educator
                 </h1>
                 <h2 class="font-poppins text-2xl sm:text-3xl md:text-4xl text-slate-300 mt-2" data-lang="hero_subtitle_roles">
                     Developer | Community Builder | Prototyper
