--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                 nav_casestudies_mobile: "My Path",
                 nav_philosophy_mobile: "Philosophy",
                 nav_contact_mobile: "Contact",
-                hero_main_title: "AI Systems Engineer & Educator",
+                hero_main_title: "AI Engineer & Educator",
                 hero_subtitle_roles: "Developer | Community Builder | Prototyper",
                 hero_description: "Learning by Building, Teaching by Doing",
                 quick_contact: "Quick Contact",
