--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                 nav_casestudies_mobile: "Mi Camino",
                 nav_philosophy_mobile: "Filosofía",
                 nav_contact_mobile: "Contacto",
-                hero_main_title: "Ingeniero y educador de sistemas de IA",
+                hero_main_title: "Ingeniero y educador de IA",
                 hero_subtitle_roles: "Desarrollador | Constructor de comunidades | Prototipador",
                 hero_description: "Aprender construyendo, enseñar haciendo",
                 quick_contact: "Contacto Rápido",
@@ -623,7 +623,7 @@
                 nav_casestudies_mobile: "나의 길",
                 nav_philosophy_mobile: "나의 철학",
                 nav_contact_mobile: "연락처",
-                hero_main_title: "AI 시스템 엔지니어 & 교육가",
+                hero_main_title: "AI 엔지니어 & 교육가",
                 hero_subtitle_roles: "개발자 | 커뮤니티 제작가 | 프로토타이퍼",
                 hero_description: "제작에 의한 학습, 실습에 의한 교육",
                 quick_contact: "빠른 연락",
