--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
                          </svg>
                          Linkedin
                      </a>
-                     <a href="https://drive.google.com/file/d/1QYacZYY2GJch5rO3lPRvlc0fTluNP25f/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="bg-slate-200 hover:bg-slate-300 text-slate-800 font-semibold px-6 py-3 rounded-lg transition-colors inline-flex items-center" data-lang="resume_download_btn">
+                     <a href="https://drive.google.com/file/d/1HBWcC8TvF7DF-acNuN-bxJhyv1HpFG_X/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="bg-slate-200 hover:bg-slate-300 text-slate-800 font-semibold px-6 py-3 rounded-lg transition-colors inline-flex items-center" data-lang="resume_download_btn">
                          <svg class="w-5 h-5 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                              <path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm3.293-7.707a1 1 0 011.414 0L9 10.586V3a1 1 0 112 0v7.586l1.293-1.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd" />
                          </svg>
-                         Download Resume
+                         Download CV
                      </a>
                 </div>
             </div>
@@ -525,7 +525,7 @@
                 // Hero
                 hero_name: "Junseong Park",
                 hero_title: "AI Engeineer & Educator",
-                resume_download_btn: "Download Resume",
+                resume_download_btn: "Download CV",
                 // Skills
                 skills_title: "Technical Skills",
                 skills_content: `
