--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                             <span class="tech-tag">Generative AI</span>
                         </div>
                         <div class="mt-6 flex flex-wrap gap-4">
-                            <a href="https://www.finitup.com/" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-200 hover:bg-slate-300 text-sky-700 font-semibold text-sm px-4 py-2 rounded-full transition-colors" data-lang="case6_link_finitup"></a>
+                            <!-- <a href="https://www.finitup.com/" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-200 hover:bg-slate-300 text-sky-700 font-semibold text-sm px-4 py-2 rounded-full transition-colors" data-lang="case6_link_finitup"></a> -->
                             <a href="https://github.com/8park/fin-dss" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-200 hover:bg-slate-300 text-sky-700 font-semibold text-sm px-4 py-2 rounded-full transition-colors" data-lang="case6_link_github"></a>
                         </div>
                     </div>
